added repo api to my portfolio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;700&family=Raleway:wght@300;400&family=Ubuntu:wght@500;700&display=swap">
 
   <link rel="stylesheet" href="css/main-min.css">
-  <link rel="stylesheet" href="css/style-min.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <script src="https://kit.fontawesome.com/c4787c1f8e.js" crossorigin="anonymous"></script>
 </head>
@@ -124,6 +124,8 @@
           </div>
         </div>
       </section> <!-- Portfolio_works sections ends -->
+      <h2>My Repos on Github</h2>
+      <div id="repos"></div>
     </section> <!-- Portfolio section ends -->
 
 
@@ -151,14 +153,8 @@
     </footer>
 
   </main>
-  <!--------------- Toggle menu/navbar script ----------->
-  <script>
-    // This script toggles the class .active on the id #nav when it's clicked
-    function myFunction() {
-      var mobileMenu = document.getElementById("nav");
-      mobileMenu.classList.toggle("active");
-    }
-  </script>
+  
+  <script src="script.js"></script>
 
 </body>
 
