changed the portfolio section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,85 @@
         </div>
       </section> <!-- Portfolio_works sections ends -->
       <h2>My Repos on Github</h2>
-      <div id="repos"></div>
+      <div id="repos">
+        <div class="repo-card">
+          <a href="https://github.com/ssmeds/Gradient-Background-Generator" target="_blank">
+            <h3>Background Generator</h3>
+            <img src="./img/portfolio-imgs/background-generator.png" alt="Background Generator app">
+            <p>A simple generator to change the gradient of background to your choice of colors. There is also the
+              option
+              of choosing two random colors. The rgb will be shown for you.</p>
+          </a>
+          <div class="tech-stack"><span class="v-js">Vanilla JS</span><span class="html5">HTML5</span><span
+              class="css3">CSS3</span>
+          </div>
+
+        </div>
+        <div class="repo-card">
+          <a href="https://github.com/ssmeds/diary" target="_blank">
+            <h3>Diary App</h3>
+            <img src="./img/portfolio-imgs/diary-app.png" alt="Diary app">
+            <p>A simple diary app that stores your diary notes in localstorage.</p>
+          </a>
+          <div class="tech-stack"><span class="v-js">Vanilla JS</span><span class="html5">HTML5</span><span
+              class="css3">CSS3</span>
+          </div>
+
+        </div>
+        <div class="repo-card">
+          <a href="https://github.com/ssmeds/how-much-change" target="_blank">
+            <h3>Change Calculator</h3>
+            <img src="./img/portfolio-imgs/how-much-change.png" alt="Change Calculator">
+            <p>Calculates how much change you will get back and in what denominations.</p>
+          </a>
+          <div class="tech-stack"><span class="v-js">Vanilla JS</span><span class="html5">HTML5</span><span
+              class="css3">CSS3</span>
+          </div>
+
+        </div>
+        <div class="repo-card">
+          <a href="https://github.com/ssmeds/what_time_is_it" target="_blank">
+            <h3>What time is it?</h3>
+            <img src="./img/portfolio-imgs/what-time-is-it.png" alt="Digital clock">
+            <p>An accurate and cool old school digital clock.</p>
+          </a>
+          <div class="tech-stack"><span class="v-js">Vanilla JS</span><span class="html5">HTML5</span><span
+              class="css3">CSS3</span></div>
+
+        </div>
+        <div class="repo-card">
+          <a href="https://github.com/ssmeds/vue-diary" target="_blank">
+            <h3>Diary App with Vue</h3>
+            <img src="./img/portfolio-imgs/vue-diary.png" alt="Diary App with Vue">
+            <p>A simple diary app with localstorage</p>
+          </a>
+          <div class="tech-stack"><span class="vue-js">Vue JS</span><span class="html5">HTML5</span><span
+              class="css3">CSS3</span></div>
+
+        </div>
+        <div class="repo-card">
+          <a href="https://github.com/ssmeds/second-library" target="_blank">
+            <h3>Library App with Svelte</h3>
+            <img src="./img/portfolio-imgs/svelte-library-1.png" alt="Svelte Library App">
+            <!-- <img src="./img/portfolio-imgs/svelte-library-2.png" alt="Svelte Library App"> -->
+            <p>A simple library app built with Svelte. Includes routing and JSON-server</p>
+          </a>
+          <div class="tech-stack"><span class="svelte-js">Svelte JS</span><span class="html5">HTML5</span><span
+              class="css3">CSS3</span><span class="json-server">JSON-server</span></div>
+
+        </div>
+        <div class="repo-card">
+          <a href="https://github.com/ssmeds/calendar-todo" target="_blank">
+            <h3>Calendar & Todo App</h3>
+            <img src="./img/portfolio-imgs/calendar-todo.png" alt="Calendar Todo App">
+            <!-- <img src="./img/portfolio-imgs/svelte-library-2.png" alt="Svelte Library App"> -->
+            <p>A calendar and todo app built with React and JSON-server</p>
+          </a>
+          <div class="tech-stack"><span class="react-js">ReactJS</span><span class="html5">HTML5</span><span
+              class="css3">CSS3</span><span class="json-server">JSON-server</span></div>
+
+        </div>
+      </div>
     </section> <!-- Portfolio section ends -->
 
 
@@ -143,17 +221,21 @@
     <footer class="contact" id="contact">
       <h2 class="contact__headline">Contact me</h2>
       <div class="icons">
-        <a class="contact__link" href="https://www.facebook.com/stina.smeds.7/" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a class="contact__link" href="https://www.linkedin.com/in/stina-smeds/" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <a class="contact__link" href="https://www.facebook.com/stina.smeds.7/" title="Facebook"><i
+            class="fab fa-facebook-f"></i></a>
+        <a class="contact__link" href="https://www.linkedin.com/in/stina-smeds/" title="LinkedIn"><i
+            class="fab fa-linkedin-in"></i></a>
         <a class="contact__link" href="https://mybigyellowhouse.com" title="Blog"><i class="fas fa-home"></i></a>
-        <a class="contact__link" href="mailto:stina.smeds@medieinstitutet.se" title="E-mail"><i class="far fa-envelope"></i></a>
-        <a class="contact__link" href="https://twitter.com/maelysworld" title="Twitter"><i class="fab fa-twitter"></i></a>
+        <a class="contact__link" href="mailto:stina.smeds@medieinstitutet.se" title="E-mail"><i
+            class="far fa-envelope"></i></a>
+        <a class="contact__link" href="https://twitter.com/maelysworld" title="Twitter"><i
+            class="fab fa-twitter"></i></a>
       </div>
       <a class="scroll-up" href="#nav">Back to top</a>
     </footer>
 
   </main>
-  
+
   <script src="script.js"></script>
 
 </body>
