changes to some styling and context

--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
             development than to finance.</p>
           <p>I started learning programming and development on my own a few years back and haven't ever regretted my
             choice to switch careers.</p>
-          <p>I've dabbled in a lot of different languages and techniques including HTML, CSS, some Javascript and C#.
-            I've tried React and Angular and Node.js. I also have an account on Github and Stackoverflow.</p>
-          <p>Websites that have been my major source of knowledge are Udemy, FreeCodeCamp and Youtube of course. In
-            addition to full-time studies, I am a full-time mother of four wild, crazy and wonderful boys.</p>
+          <p>I soon have a <span>degree in Front End Development from Medieinstitutet</span> and have learned so much
+            during those
+            two years.</p>
+          <p>My favorite tech-stack for now is ReactJS, SCSS, MongoDB, Express and many more. I love to learn new techs
+            and make small projects whenever I find time, to try them out. </p>
+          <p>In
+            addition to full-time studies, I am a mother of four wild, crazy and wonderful boys.</p>
         </article>
       </div>
     </section> <!-- About section ends -->
@@ -81,10 +84,14 @@
       <h2 class="portfolio__headline">Ski<span>lls</span></h2>
       <div class="portfolio__icons">
         <!-- Fontawesome skill icons -->
-        <i class="fab fa-html5"></i>
-        <i class="fab fa-css3-alt"></i>
-        <i class="fab fa-wordpress"></i>
-        <i class="fab fa-js"></i>
+        <i class="fab fa-html5 icon"><span class="tooltiptext">HTML5</span></i>
+        <i class="fab fa-css3-alt icon"><span class="tooltiptext">CSS3</span></i>
+        <i class="fa-brands fa-sass icon"><span class="tooltiptext">SCSS</span></i>
+        <i class="fab fa-wordpress icon"><span class="tooltiptext">Wordpress</span></i>
+        <i class="fab fa-js icon"><span class="tooltiptext">JavaScript</span></i>
+        <i class="fa-brands fa-react icon"><span class="tooltiptext">ReactJS</span></i>
+        <i class="fa-brands fa-node-js icon"><span class="tooltiptext">Node.js</span></i>
+        <i class="fa-brands fa-vuejs icon"><span class="tooltiptext">Vue.js</span></i>
       </div>
 
       <section class="portfolio__works">
